# fjpydev

./: CMakeLists.txt  README.md
buildtools/: get_fj_contrib.sh
cmake/: cpp.cmake  python.cmake  test.py
cmake/Modules/: FindHepMC.cmake
lundplane/: CMakeLists.txt
lundplane/python/: CMakeLists.txt
mptools/: CMakeLists.txt
mptools/include/mptools/: aleph.hh  pythiahepmc.hh
mptools/python/: CMakeLists.txt  mptools.i
mptools/src/: aleph.cc  pythiahepmc.cc  strutil.cc
pythiafjtools/: CMakeLists.txt
pythiafjtools/include/PythiaFJTools/: hepmctools.hh  pyfjtools.hh
pythiafjtools/python/: CMakeLists.txt
pythiafjtools/src/: hepmctools.cc  pyfjtools.cc
recursivetools/: .gitignore  CMakeLists.txt
recursivetools/python/: CMakeLists.txt
test/: .gitignore  05-user-info.py  HepMC-2.06.09-CMakeLists.txt.patch  build_here.sh  cleanup.sh  fix_hepmc_links.sh  local_fastjet_install.sh  local_hepmc2_install.sh  local_hepmc2_install_cmake.sh  local_hepmc3_install.sh  local_lhapdf_install.sh  local_pythia_install.sh  pip3_requirements.txt  setup_env.sh  test_aleph.py  test_aleph_lund.ipynb  test_fj_pythia_softdrop_angularity.html  test_fj_pythia_softdrop_angularity.ipynb  test_fj_pythia_softdrop_angularity.py  test_lund.py  test_lund_plot2D.ipynb  test_pythia_hepmc.py  test_pythia_lhapdf.py  test_user_info.py
